# Temperature-Dashboard

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: auto-tag.yml  ci.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/android/: build.gradle.kts  proguard-rules.pro
app/android/src/main/: AndroidManifest.xml
app/desktop/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
ble/android/: build.gradle.kts
ble/android/src/main/: AndroidManifest.xml
ble/api/: build.gradle.kts
ble/btleplug-jni/: Cargo.toml  README.md
ble/btleplug-jni/src/: lib.rs
ble/desktop/: build.gradle.kts
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/: AndroidApplicationComposeConventionPlugin.kt  AndroidApplicationConventionPlugin.kt  AndroidLibraryConventionPlugin.kt  JvmLibraryConventionPlugin.kt  RoomConventionPlugin.kt  (+2 more)
core/database/: build.gradle.kts
core/database/schemas/com.adsamcik.temperaturedashboard.core.database.TemperatureDatabase/: 1.json  2.json  3.json
core/datastore/: build.gradle.kts
core/designsystem/: build.gradle.kts
core/model/: build.gradle.kts
core/ui/: build.gradle.kts
decoder/api/: build.gradle.kts
decoder/builtins/: build.gradle.kts
feature/dashboard/: build.gradle.kts
feature/detail/: build.gradle.kts
feature/scan/: build.gradle.kts
feature/settings/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
shared/: build.gradle.kts
(+204 files in other folders)
