[package]
name = "btleplug-jni"
version = "0.1.0"
edition = "2021"
description = "C ABI shim over btleplug — consumed by the Temperature Dashboard JVM via JNA."
license = "MIT OR Apache-2.0"

[lib]
name = "btleplug_jni"
crate-type = ["cdylib"]

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
once_cell = "1"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
uuid = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
